Séparation des PopUp

--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -66,6 +66,7 @@ block script
 	script(src='../javascripts/webpd/pd-fileutils.js')
 	script(src='../javascripts/game/db/map.js')
 	script(src='../javascripts/game/boot.js')
+	script(src='../javascripts/game/window/formation.js')
 	script(src='../javascripts/game/window/upgrade.js')
 	script(src='../javascripts/game/states/city.js')
 	script(src='../javascripts/game/states/planets.js')
