--- a/views/game/End.pug
+++ b/views/game/End.pug
@@ -1,6 +1,6 @@
 html
   head
-    link(rel='stylesheet', href='loose.css', type='text/css')
+    link(rel='stylesheet', href='../stylesheets/loose.css', type='text/css')
   body
     .ensemble
       img#planete1(src='../images/backgrounds/planete1.png')
