--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -98,7 +98,7 @@ block content
 			button.pure-button(id="attaque", onclick="start('attaque');") Attaque
 			br
 			button.pure-button(id="commerce", onclick="start('commerce');") Commerce
-			script(type="text/javascript").
+			//script(type="text/javascript").
 				document.getElementById('attaque').style.visibility = "hidden";
 
 	// WebPd
