--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -104,11 +104,14 @@ block content
 				}else{
 					document.getElementById('commerce').style.visibility = "visible";
 				}
-				
+				document.getElementById('attaque').style.visibility = "hidden";
+				document.getElementById('city').style.visibility = "hidden";
+
+				/*
 				if(planet_the_first==null){
 					document.getElementById('attaque').style.visibility = "hidden";
 					document.getElementById('city').style.visibility = "hidden";
-				}else{		
+				}else{
 					var is_mine = false;
 					for (var i in player.planets) {
 						if (player.planets[i]._id == planet_the_first._id) {
@@ -123,6 +126,8 @@ block content
 						document.getElementById('city').style.visibility = "hidden";
 					}
 				}
+				*/
+
 	// WebPd
 	script(src='../javascripts/webpd/loadPatches.js')
 	script(type='text/javascript').
