--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -72,6 +72,7 @@ block script
 				}
 			}
 		}
+		console.log(JSON.stringify(solar_system, null, 4));
 
 	// Phaser
 	script(src='../javascripts/phaser/phaser.min.js')
