Petite traduction + rajout de nouvelles images + modification d'apparence de Attaque et commerce

--- a/views/game/End.pug
+++ b/views/game/End.pug
@@ -5,7 +5,7 @@ html
     .ensemble
       img#planete1(src='../images/backgrounds/planete1.png')
       p
-        | Votre espece a été anéanti... Vous n'avez pas été un assez bon stratège. Espérons que vous aurez plus de chance la prochaine fois !
+        | Your species has been wiped out ... You have not been a pretty good strategist. Hope you have better luck next time !
     header
       img#planete2(src='../images/backgrounds/planete2.png')
       img#loose(src='../images/backgrounds/image.png')
