--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -105,9 +105,9 @@ block content
 			button.pure-button(id="planet", onclick="start('planets');") Planets
 			button.pure-button(id="city", onclick="start('city');") City
 			br
-			button.pure-button(id="attaque", onclick="start('attaque');") Attaque
+			button.pure-button(id="attaque", onclick="start('attaque');") Attack
 			br
-			button.pure-button(id="commerce", onclick="start('commerce');") Commerce
+			button.pure-button(id="commerce", onclick="start('commerce');") Trude
 
 			script(type="text/javascript").
 				document.getElementById('commerce').style.visibility = "hidden";
