--- a/views/users/choose.pug
+++ b/views/users/choose.pug
@@ -88,67 +88,68 @@ block content
 		});
 
 	aside#Glurpstext
-		b  Glurps
-		| ,
-		| 									Munis de grandes cornes et de dents pointues ils ont évolué en dévorant
-		| 									tout sur leur passage plantes, arbres, animaux ...
-		| 									Les marécages de leurs planètes sont d un vert vaseux d où leurs couleurs a
-		| 									faire vomir des limaces.
-
+		b  Glurps,
+		| Equipped with large horns and sharp teeth they evolved devouring everything
+		|	in their path plants , trees, animals ... Swamps of their planets are a muddy green ,
+		| hence their colors to vomit slugs.
+		|
 	aside#Hatburgtext
 		b  Hatburg
 		| ,
-		|  									Leur monde est beauté et harmonie, par manque de cheveux, ils décidèrent de se
-		| 									mettre des nœuds sur les cornes pour donnée à leurs looks un aspect de paye et d amour.
-		| 									Leurs consommations excessive de champignons leur donne les points blancs sur leurs peaux.
+		|  							Their world is beauty and harmony , lack of hair,
+		|								they decided to put nodes on the horns to give them a soft
+		|								and friendly side. Their excessive consumption of mushrooms
+		|								gives them white spots on their skin.
 
 	aside#Laistartext
 		b  Laistar
 		| ,
-		|  									Rien ne va plus, pour eux leur monde est le moins parfait. Ils se plaignent constamment
-		| 									de leurs manières de vivre cela ne les empêche pas de ne rien faire pour l améliorer.
-		| 									Ne leur parlez surtout pas ils ne vous écouteront jamais et râleront en continu.
+		|  									Nothing is going right for them. Their world is the least of the galaxy
+		|										They constantly complain about their ways of life that does not stop them
+		|										from doing nothing to improve it. Please do not talk about them they will
+		|										never listen to you and râleront continuously.
 
 	aside#Larvatext
 		b  Larva
 		| ,
-		|  									Pas simple de se déplacer lorsqu on louche avec ses 3 yeux. Mais avec leur air intelligemment inapte ,
-		| 									ils deviennent vite attachants c est par leur apparence que ce peuple réussit à survivre à ses
-		| 									envahisseurs.
+		|										Not easy to move when ladle with 3 eyes. But with their air unfit intelligently ,
+		|										they quickly become endearing is their appearance that people managed to survive his
+		| 									invaders.
+		|
 
 	aside#MrMustachtext
 		b   MrMustach
 		| ,
-		| 	 								Avec un aileron en guise de moustache, leurs passe-temps, enseigner à leurs confrères leurs
-		| 									connaissances, malheureusement, tout le monde sait tout sur leurs planètes. Lorsque celle-ci c est
-		| 									fait envahir les MrMustach les ont fait fuir en parlant en continu de leurs connaissances.
-		| 									Fuyez si vous les croisez !
-
+		| 	 							With a spoiler as a mustache, their hobbies , their colleagues teach their
+		| 								knowledge, unfortunately , everyone knows everything about their planets . When it is
+		|					 				is invading the MrMustach have driven by speaking continuously their knowledge.
+		| 								Run away if you cross them!
 	aside#Mrsurtext
 		b Mrsur
 		| ,
-		| 									Ne vous frottez pas à eux, avec leurs piques sur leurs dos ils vous transperceront en un instant.
-		|   								Faisant partie de la famille des diodons, ils se gonflent instantanément lorsqu ils sont contrariés
-		| 									malheureusement, quand ils gonflent ils s'envolent, c'est ainsi que plusieurs de leurs espèces ont disparu.
+		| 								Do not rub them with their spades on their backs they stab you in an instant.
+		| 								Part of the family diodons , they swell instantly when they are upset
+		| 								Unfortunately , when they swell they fly , that's how many of their species disappeared .
 
 	aside#Orzrentext
 		b  Orzren
 		| ,
-		| 									De couleur bleu ciel, cette espèce vit dans les nuages. À cause de la pression de l air ils perdent
-		| 									leurs deuxièmes cornes après la naissance. Lorsque le temps est gris les Orzren ont la capacité de changer
-		| 									d espèce comme le caméléon, mais ne peut changer que de deux couleurs ce qui devient dur de se camoufler
-		| 									une fois sur la terre.
+		| 									Sky blue' colors' , this species lives in the clouds. Because of the air pressure they lose
+		|									 	their second horns after birth. When the weather is gray Orzren to the ability to change
+		| 									species such as the chameleon, but can only change two colors which becomes hard to camouflage
+		| 									once on the ground.
 
 	aside#Runorpoxtext
 		b  Runorpox
 		| ,
-		| 	 								Cette espèce avait tellement honte de leurs peaux grisâtres qu ils ont tous décidé de ne plus du tout se
-		| 									couper les poiles. Tous les coiffeurs ont été bannis de leurs planètes et les ciseaux brulés. Il ne reste
-		| 									plus rien sur cette espèce pour couper a par leurs dents.
-
+		|
+		|										This species was so ashamed of their gray skins they have all decided not to be at all
+		|	 									cut hair . All hairdressers were banished from their planets and burnt scissors. It remains
+		| 									nothing of this kind has to cut their teeth.
 	aside#Vaextext
 		b  Vaex
 		| ,
-		| 									Ne soyez pas bernés par son effet de diabolique. Cette espèce est depuis toujours inoffensive. Avec leurs dents
-		| 									rondes ils ne parviennent à manger que des légumes. Les piques sur leurs têtes sont limés pour essayer d éloigner
-		| 									les envahisseurs.
+		|
+		|										Do not be fooled by his evil effect. This species has always harmless. With their teeth
+		| 									round they manage to eat only vegetables. Pikes on their heads are filed down to try away
+		| 									The invaders.
