--- a/views/users/start.pug
+++ b/views/users/start.pug
@@ -39,5 +39,5 @@ block content
     })
 
   .pure-menu.custom-restricted-width
-    span.pure-menu-heading Joueurs connectés
+    span.pure-menu-heading Players online
       ul.pure-menu-list
