--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,4 @@ block content
 		img.title(src='/images/assets/erkma.png')
 	a#Addbutton(type='button', name='Add', href='/users/add')
 	a#Loginbutton(type='button', name='Login', href='/users/login')
-	p.pfooter Périples futures ... Victoires prochaines !
+	p.pfooter Future trips ... Next Wins !
