Application des notifications

--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -82,6 +82,7 @@ block script
 	script(src='../javascripts/game/db/map.js')
 	script(src='../javascripts/game/boot.js')
 	script(src='../javascripts/game/window/formation.js')
+	script(src='../javascripts/game/window/rapport.js')
 	script(src='../javascripts/game/window/upgrade.js')
 	script(src='../javascripts/game/states/city.js')
 	script(src='../javascripts/game/states/planets.js')
