j'aime pas Arthur

--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -107,7 +107,7 @@ block content
 			br
 			button.pure-button(id="attaque", onclick="start('attaque');") Attack
 			br
-			button.pure-button(id="commerce", onclick="start('commerce');") Trude
+			button.pure-button(id="commerce", onclick="start('commerce');") Trade
 
 			script(type="text/javascript").
 				document.getElementById('commerce').style.visibility = "hidden";
