--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -2,7 +2,12 @@ extends ../layouts/layoutgame.pug
 
 block libs
 	script(src='../javascripts/jquery.min.js')
+	script(src='../javascripts/libs/pnotify.custom.min.js')
 	script(src='../javascripts/socket.io.js')
+
+block style
+	link(rel='stylesheet', href='/stylesheets/animate.css')
+	link(rel='stylesheet', href='/stylesheets/pnotify.custom.min.css')
 
 block script
 	script(type='text/javascript').
@@ -85,9 +90,9 @@ block script
 	script(src='../javascripts/game/window/rapport.js')
 	script(src='../javascripts/game/window/upgrade.js')
 	script(src='../javascripts/game/states/city.js')
+	script(src='../javascripts/game/states/commerce.js')
 	script(src='../javascripts/game/states/planets.js')
 	script(src='../javascripts/game/states/attaque.js')
-	script(src='../javascripts/game/states/commerce.js')
 	script(src='../javascripts/game/game.js')
 
 block content
@@ -108,7 +113,7 @@ block content
 			br
 			button.pure-button(id="attaque", onclick="start('attaque');") Attack
 			br
-			button.pure-button(id="commerce", onclick="start('commerce');") Trude
+			button.pure-button(id="commerce", onclick="start('commerce');") Trade
 
 			script(type="text/javascript").
 				document.getElementById('commerce').style.visibility = "hidden";
