--- a/views/layouts/layoutgame.pug
+++ b/views/layouts/layoutgame.pug
@@ -6,6 +6,7 @@ html
 		link(rel='stylesheet', href='/stylesheets/pure-min.css')
 		link(rel='stylesheet', href='/stylesheets/launcher.css')
 		link(rel='stylesheet', href='/stylesheets/game.css')
+		block style
 
 	body
 		img#full-screen-background-image(alt="full screen background image", src="/images/backgrounds/planets.jpg")
