--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -65,7 +65,7 @@ block script
 			//console.log(JSON.stringify(player.ressources.kaga, null, 4));
 		})
 		doIFinish = function(){
-			console.log('test do i finish');
+			//console.log('test do i finish');
 			for(var i in solar_system.users){
 				if(username == solar_system.users[i].username){
 					if(solar_system.users[i].planets.length == 0){
