Notifications de réception de commerce

--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -30,9 +30,18 @@ block script
 			socket.emit('game', solar_system._id);
 			doIFinish();
 		}
-		var a;
+		function notifUpdate() {
+			for(i in player.messages) {
+				if(player.messages[i].read == false && player.messages[i].type == "AskCommerce")
+				{
+					createNotif('You\'ve received an exchange request', 'Resume', 'confirm', player.messages[i].data);
+				}
+			}
+		}
+		var a,b;
 		function realTime(){
 			a = setInterval(askUpdate, 1000);
+			//b = setInterval(notifUpdate, 100);
 		}
 		function displayMenu(id) {
 			player = solar_system.users[id];
@@ -69,7 +78,7 @@ block script
 			for(var i in solar_system.users){
 				if(username == solar_system.users[i].username){
 					if(solar_system.users[i].planets.length == 0){
-						console.log('pouet');
+						//console.log('pouet');
 						location.assign('http://'+document.domain+':'+document.location.port+'/game/end');
 					}else if (solar_system.users[i].planets.length == 6){
 						location.assign('http://'+document.domain+':'+document.location.port+'/game/win');
@@ -77,7 +86,7 @@ block script
 				}
 			}
 		}
-		console.log(JSON.stringify(solar_system, null, 4));
+		//console.log(JSON.stringify(solar_system, null, 4));
 
 	// Phaser
 	script(src='../javascripts/phaser/phaser.min.js')
