On implémente les notifs

--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -34,7 +34,7 @@ block script
 			for(i in player.messages) {
 				if(player.messages[i].read == false && player.messages[i].type == "AskCommerce")
 				{
-          //user_id, message_id
+					var data = {user_id: player._id, message_id: player.messages[i]._id};
 					socket.emit('messageRead', data);
 					createNotif('You\'ve received an exchange request', 'Resume', 'confirm', player.messages[i].data);
 				}
@@ -43,7 +43,7 @@ block script
 		var a,b;
 		function realTime(){
 			a = setInterval(askUpdate, 1000);
-			//b = setInterval(notifUpdate, 100);
+			b = setInterval(notifUpdate, 100);
 		}
 		function displayMenu(id) {
 			player = solar_system.users[id];
