Notifications (presque fini :!!!)

--- a/views/game/game.pug
+++ b/views/game/game.pug
@@ -36,6 +36,7 @@ block script
 				{
 					var data = {user_id: player._id, message_id: player.messages[i]._id};
 					socket.emit('messageRead', data);
+					console.log(player.messages[i].read);
 					createNotif('You\'ve received an exchange request', 'Resume', 'confirm', player.messages[i].data);
 				}
 			}
@@ -43,7 +44,7 @@ block script
 		var a,b;
 		function realTime(){
 			a = setInterval(askUpdate, 1000);
-			b = setInterval(notifUpdate, 100);
+			b = setInterval(notifUpdate, 2000);
 		}
 		function displayMenu(id) {
 			player = solar_system.users[id];
